Add last dot for И.О.Ф.

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -497,7 +497,7 @@
 % \begin{macro}{\@FEFUsignamereversed}
 % Insert space for a sign and a name afterwards, surname last
 %    \begin{macrocode}
-\newcommand{\@FEFUsignamereversed}[4][И.О.Ф]{%
+\newcommand{\@FEFUsignamereversed}[4][И.О.Ф.]{%
     \@FEFUpostfield[#1]{\@FEFUlabeled{\uline{\mbox{\hspace{#2}}}}{подпись} }{\@FEFUshortnamereversed{#3}}{#4}%
 }
 %    \end{macrocode}
