Add cite package

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -103,6 +103,7 @@
 \RequirePackage{etoolbox}
 \RequirePackage{relsize}
 \RequirePackage{multirow}
+\RequirePackage{cite}
 %    \end{macrocode}
 % The \textsf{tocloft} package is loaded with \textsf{subfigure} option if necessary.
 %    \begin{macrocode}
