Left align table caption

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -900,7 +900,8 @@
 % \end{macro}
 % Removes space after table caption
 %    \begin{macrocode}
-\captionsetup[table]{skip=0pt,position=top}
+\captionsetup[table]{skip=0pt,position=top,justification=raggedright,singlelinecheck=false}
+\captionsetup[longtable]{skip=0pt,position=top,justification=raggedright,singlelinecheck=false}
 %    \end{macrocode}
 % \begin{macro}{fefutable}
 % Inserts table with tabular environment inside.
