Set coorect figure name

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -741,6 +741,12 @@
 }
 %    \end{macrocode}
 % \end{macro}
+% Set correct figure name
+%    \begin{macrocode}
+\addto\captionsrussian{%
+    \renewcommand{\figurename}{Рисунок}%
+}
+%    \end{macrocode}
 % No title and author by default.
 %    \begin{macrocode}
 \title{}
