--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -886,8 +886,11 @@
 %    \end{macrocode}
 % Lists style is set up here.
 %    \begin{macrocode}
-\setlist[itemize]{leftmargin=1.5\parindent,itemsep=-1ex,topsep=0pt,wide}
-\setlist[enumerate]{leftmargin=1.5\parindent,itemsep=-1ex,topsep=0pt,wide}
+\setlistdepth{2}
+\setlist[itemize,1]{itemsep=-1ex,topsep=0pt,label=\textendash,wide=\parindent}
+\setlist[itemize,2]{itemsep=-1ex,topsep=0pt,label=\textbullet,wide=1.5\parindent}
+\setlist[enumerate,1]{itemsep=-1ex,topsep=0pt,label=\arabic*.,wide=\parindent}
+\setlist[enumerate,2]{itemsep=-1ex,topsep=0pt,label=\alph*),wide=1.5\parindent}
 %    \end{macrocode}
 % \begin{macro}{\@FEFUcountcols}
 % Counts symbols \& in given macro.
