Add deprecation warning for \maketableofcontents

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -660,7 +660,7 @@
 % \begin{macro}{\maketableofcontents}
 % Makes table of contents (deprecated).
 %    \begin{macrocode}
-\newcommand{\maketableofcontents}{\tableofcontents}
+\newcommand{\maketableofcontents}{\ClassWarning{fefu}{\noexpand\maketableofcontents is deprecated. Use \noexpand\tableofcontents}\tableofcontents}
 %    \end{macrocode}
 % \end{macro}
 % \begin{macro}{\makepracticetask}
